# ha-neakasa-litterbox

./: .ruff.toml  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  requirements_test.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  lint.yml  release.yml
config/: configuration.yaml
custom_components/integration_blueprint/: api.py  coordinator.py  manifest.json  quality_scale.yaml  sensor.py
custom_components/integration_blueprint/translations/: en.json  pt-BR.json
custom_components/neakasa_litterbox/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  entity.py  manifest.json  options_flow.py  push.py  quality_scale.yaml  repairs.py
custom_components/neakasa_litterbox/binary_sensor/: __init__.py  bucket_full.py  needs_cleaning.py
custom_components/neakasa_litterbox/button/: __init__.py  clean_now.py  level_now.py
custom_components/neakasa_litterbox/exceptions/: __init__.py  api_client_authentication_error.py  api_client_communication_error.py  api_client_device_busy_error.py  api_client_error.py
custom_components/neakasa_litterbox/number/: __init__.py  calibrate_sand.py
custom_components/neakasa_litterbox/sensor/: __init__.py  cat_last_visit.py  cat_visits_today.py  cat_weight.py  last_visit.py  operating_state.py  sand_percent.py  visits_today.py
custom_components/neakasa_litterbox/switch/: __init__.py  auto_clean.py  auto_level.py  child_lock.py  silent_mode.py
custom_components/neakasa_litterbox/translations/: en.json  pt-BR.json
scripts/: develop  lint
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_init.py  test_number.py  test_options_flow.py  test_push.py  test_repairs.py  test_sensor.py  test_switch.py  test_translations.py
